--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -3,6 +3,19 @@
     position: relative;
 }
 
+.header__title-shadow {
+    opacity: 0.07;
+    max-width: 467px;
+    top: 0;
+    left: -0.9%;
+}
+
+.aside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
 
 .header__slider {
 
@@ -34,7 +47,6 @@
     width: 100%;
     color: $color-common;
     
-
     .dots-box {
         width: 200px;
         display: flex;
@@ -59,7 +71,6 @@
     .slick-current .dots-box {
         border-color: $color-secondary;
     }
-
 }
 
 .header__content {
