added aside section

--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -13,6 +13,8 @@ a {
 
 p {margin: 0;}
 h1,h2,h3 {margin: 0;}
+ul {margin: 0; padding: 0;}
+li {list-style: none;}
 
 .suptitle{
     display: inline-block;
