--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -6,8 +6,9 @@
 .header__title-shadow {
     opacity: 0.07;
     max-width: 467px;
-    top: 0;
+    top: -0.9%;
     left: -0.9%;
+    z-index: 4;
 }
 
 .aside {
@@ -15,6 +16,32 @@
     top: 0;
     left: 0;
     z-index: 5;
+    max-width: 169px;
+    width: 100%;
+    height: 100%;
+    border-right: 1px solid rgba(255, 255, 255, 0.25);
+
+    &__logo {
+        display: block;
+        cursor: pointer;
+        z-index: 6;
+    }
+}
+
+.menu {
+
+    &__link {
+        font-size: 12px;
+        font-weight: $font-medium;
+        color: $color-common;
+        letter-spacing: 3px;
+        line-height: 1.16;
+        transition: $transition-common;
+
+        &:hover {
+            color: $color-secondary;
+        }
+    }
 }
 
 .header__slider {
@@ -23,7 +50,7 @@
         height: 100vh;
         background: url('../img/header/header-bg.jpg') no-repeat;
         background-size: cover;
-        background-position: center;
+        //background-position: center;
         position: relative;
     }
 
