--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -64,4 +64,9 @@ li {list-style: none;}
 
 .slider-arrow {
     cursor: pointer;
+    transition: $transition-common;
+
+    &:hover {
+        background-color: $color-secondary;
+    }
 }
