--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -142,6 +142,10 @@
     max-width: 920px;
     width: 100%;
     color: $color-common;
+
+    &__item {
+        outline: none;
+    }
     
     .dots-box {
         width: 200px;
@@ -150,6 +154,13 @@
         align-items: center;
         border-top: 4px solid $color-common;
         padding-top: 4px;
+        cursor: pointer;
+        transition: $transition-common;
+
+        &:hover {
+            border-color: $color-secondary;
+            color: $color-secondary;
+        }
 
         &__number {
             font-size: 24px;
