--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -65,6 +65,7 @@ li {list-style: none;}
 .slider-arrow {
     cursor: pointer;
     transition: $transition-common;
+    padding: 0;
 
     &:hover {
         background-color: $color-secondary;
