--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -125,9 +125,10 @@
 
     .slider-arrow {
         position: absolute;
-        top: 40px;
-        right: 80px;
+        top: 35px;
+        right: 75px;
         z-index: 4;
+        padding: 5px;
     }
 
     .slider-arrow-left {
