--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -220,7 +220,8 @@
 .map__line-animation {
     stroke-dashoffset: 600;
     stroke-dasharray: 600;
-    animation: animdash 5s infinite 1s;
+    animation: animdash 5s 1 1s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes animdash {
