--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -37,6 +37,14 @@
     flex-direction: column;
     align-items: center;
 
+    &__icon {
+        fill: $color-common;
+        width: 50px;
+        height: 50px;
+        transition: fill $transition-common;
+        margin-bottom: 5px;
+    }
+
     &__link {
         display: flex;
         flex-direction: column;
@@ -53,6 +61,10 @@
             color: $color-secondary;
         }
 
+        &:hover .menu__icon {
+            fill: $color-secondary;
+        }
+
         img {
             margin-bottom: 5px;
         }
@@ -61,12 +73,24 @@
 
 .aside__search {
     display: block;
-    width: 24px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    fill: $color-common;
     z-index: 6;
     cursor: pointer;
     margin: 0 auto;
     margin-top: 8px;
     margin-bottom: 23px;
+    transition: fill $transition-common;
+
+    &:hover {
+        fill: $color-secondary;
+    }
+
+    &-link {
+        display: block;
+    }
 }
 
 .date {
