--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -131,12 +131,23 @@
 .header__go-down {
     display: flex;
     justify-content: center;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     position: absolute;
-    left: 210px;
-    bottom: 30px;
+    left: 190px;
+    bottom: 20px;
     z-index: 3;
+
+    &-icon {
+        fill: $color-common;
+        height: 50px;
+        width: 50px;
+        transition: fill $transition-common;
+    }
+
+    &:hover .header__go-down-icon {
+        fill: $color-secondary;
+    }
 }
 
 
