added a new section

--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -237,11 +237,13 @@
 
     .title {
         margin-bottom: 40px;
+        display: block;
     }
     
     .title--small {
         margin-top: 4px;
         margin-bottom: 20px;
+        display: block;
     }
 }
 
