--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -42,6 +42,9 @@ li {list-style: none;}
 }
 
 .title {
+    position: relative;
+    display: inline-block;
+
     font-weight: $font-extra-bold;
     font-size: 80px;
     line-height: 1.075;
@@ -50,11 +53,27 @@ li {list-style: none;}
     &--small {
         font-size: 40px;
     }
+
+    &--line::after {
+        position: absolute;
+        display: block;
+        content: '';
+        top: 0;
+        right: 0;
+        width: 80px;
+        height: 1px;
+        background-color: $color-secondary;
+        margin-bottom: 15px;
+    }
 }
 
 .title-shadow {
     z-index: 1;
+
     position: absolute;
+    right: 0;
+    top: 0;
+
     font-size: 200px;
     line-height: 0.78;
     font-weight: $font-extra-bold;
