--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -1,3 +1,9 @@
+html {box-sizing: border-box;}
+
+*,
+*::before,
+*::after {box-sizing: inherit;}
+
 body {
     color: $color-common;
     background-color: $color-black;
@@ -15,6 +21,11 @@ p {margin: 0;}
 h1,h2,h3 {margin: 0;}
 ul {margin: 0; padding: 0;}
 li {list-style: none;}
+
+.container {
+    max-width: 1920px;
+    margin: 0 auto;
+}
 
 .suptitle{
     display: inline-block;
