--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -1,17 +1,16 @@
 .surf {
-    .container {
-        max-width: 1280px;
-    }
-
+    background: url('../../img/surf/location-icon.png') no-repeat;
+    background-position: right 210px;
+    background-size: auto;
     background-color: #171919;
     padding-top: 164px;
     height: 1000px;
 
-    h2.title {
+    &__title {
         margin-left: 13.5%;
     }
 
-    .title-shadow {
+    &__title-shadow {
         top: 35px;
         right: 25px;
     }
@@ -21,5 +20,13 @@
         flex-direction: column;
         align-items: flex-end;
         margin-top: 50px;
+        margin-right: 80px;
+
+        span {font-weight: 100;}
     }
+
+    &__location {
+        margin-bottom: 13px;
+    }
+
 }
