--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -56,18 +56,51 @@
     display: flex;
     
 
-    border-top: 1px solid green;
-    border-bottom: 1px solid green;
 }
 
 .surf-card {
     width: 400px !important;
     height: 750px;
     width: 100%;
-    background-color: #fff;
-    color: green;
+    position: relative;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-    border: 1px solid red;
+
+   &__inner {
+       width: 100%;
+       height: 100%;
+       background-color: rgba(#1C2121, .85);
+       z-index: 5;
+   }
+
+   &__title {
+       width: 140px;
+       padding: 75px 0 0 40px;
+       font-size: 40px;
+       line-height: 1;
+       font-weight: $font-extra-bold;
+       text-transform: uppercase;
+   }
+
+   &__location {
+       font-size: 18px;
+       letter-spacing: 8px;
+       text-transform: uppercase;
+       transform: rotate(-90deg);
+       position: absolute;
+       left: 40px;
+       bottom: 80px;
+       width: 0;
+       height: 0;
+       white-space: nowrap;
+
+       span {
+           font-weight: 100;
+       }
+   }
+
 }
 
 .surf-card:not(:first-child) {
@@ -80,4 +113,8 @@
 
 .surf-card:nth-child(odd) {
     margin-top: 90px;
+}
+
+.surf-card:nth-child(4n + 1) {
+    margin-top: 32px;
 }
