--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -101,3 +101,44 @@ li {list-style: none;}
         background-color: $color-secondary;
     }
 }
+
+.btn-common {
+    display: flex;
+    height: 80px;
+    color: $color-common;
+    font-size: 40px;
+    font-weight: $font-extra-bold;
+    text-transform: uppercase;
+    align-items: center;
+
+    span {
+        background-color: $color-secondary;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        margin-left: 20px;
+        padding-left: 17px;
+        padding-right: 17px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 1px;
+            background-color: $color-common;
+            top: 50%;
+            left: -10px;
+        }
+
+        &::after {
+            content: "";
+            display: inline-block;
+            height: 20px;
+            width: 25px;
+            background: url("../img/header/arrow-right.svg") no-repeat;
+            z-index: 7;
+            margin-left: 17px;
+        }
+    }
+}
