--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -4,7 +4,7 @@
     background-size: auto;
     background-color: #171919;
     padding-top: 164px;
-    height: 1500px;
+    height: 2500px;
 
     &__title {
         margin-left: 13.5%;
@@ -29,6 +29,44 @@
         margin-bottom: 13px;
     }
 }
+
+/* SURF MAP */
+
+.surf-map {
+    max-width: 1200px;
+    min-height: 635px;
+    background: url('../../img/surf/surf-slider/surf-map.png') no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0 auto;
+    margin-top: -30px;
+
+    &__list {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    &__item {
+        position: absolute;
+
+        &--1 {
+            top: 20px;
+            right: 30px;
+        }
+    }
+
+    &__circle {
+        width: 24px;
+        height: 24px;
+        background-color: $color-secondary;
+        border-radius: 50%;
+        box-shadow: 0 0 35px $color-secondary;
+        cursor: pointer;
+        z-index: 7;
+    }
+}
+
 
 /* SURF SLIDER  */
 
