--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -36,7 +36,7 @@
     max-width: 1200px;
     min-height: 635px;
     background: url('../../img/surf/surf-slider/surf-map.png') no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     margin: 0 auto;
     margin-top: -30px;
@@ -44,15 +44,48 @@
     &__list {
         width: 100%;
         height: 100%;
-        position: relative;
+        display: flex;
+        justify-content: space-between;
     }
 
     &__item {
-        position: absolute;
+        position: relative;
 
         &--1 {
-            top: 20px;
-            right: 30px;
+            top: 340px;
+            left: 0;
+        }
+
+        &--2 {
+            top: 270px;
+            left: -3%;
+        }
+
+        &--3 {
+            top: 320px;
+        }
+
+        &--4 {
+            top: 240px;
+        }
+
+        &--5 {
+            top: 550px;
+            left: -3%;
+        }
+
+        &--6 {
+            top: 390px;
+            left: -3%;
+        }
+
+        &--7 {
+            top: 530px;
+        }
+
+        &--8 {
+            top: 515px;
+            left: -3%;
         }
     }
 
