--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -6,7 +6,7 @@ html {box-sizing: border-box;}
 
 body {
     color: $color-common;
-    background-color: $color-black;
+    background-color: $color-bg;
     font-family: 'Fira Sans', sans-serif;
     font-weight: $font-regular;
     line-height: 1.45;
