--- a/app/scss/blocks/_travel.scss
+++ b/app/scss/blocks/_travel.scss
@@ -1,9 +1,12 @@
 .travel {
     padding-top: 288px;
+
+
     height: 2000px;
 
     &__title {
         margin-left: 13.5%;
+        display: inline-block;
     }
 
     &__title-shadow {
@@ -12,16 +15,40 @@
     }
 
     &-head {
+        height: 780px;
+
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         margin-top: 180px;
         margin-right: 80px;
         span {font-weight: 100;}
+
+        &__beach {
+            display: block;
+            position: absolute;
+            top: -40px;
+            left: 0;
+            opacity: 0.9;
+            background: url('../../img/travel/beach1.jpeg') no-repeat;
+            background-size: cover;
+            background-position: center;
+            box-shadow: inset -50px 0px 50px 60px rgba(23, 25, 25, 1);
+
+            max-width: 1115px;
+            max-height: 780px;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &-suptitle {
         margin-bottom: 13px;
     }
+
+}
+
+.travel-airline {
 
 }
