--- a/app/scss/blocks/_travel.scss
+++ b/app/scss/blocks/_travel.scss
@@ -31,7 +31,7 @@
             top: -40px;
             left: 0;
             opacity: 0.9;
-            background: url('../../img/travel/beach1.jpeg') no-repeat;
+            background: url('../../img/travel/airlie-beach/airlie-beach.jpg') no-repeat;
             background-size: cover;
             background-position: center;
             box-shadow: inset -50px 0px 50px 60px rgba(23, 25, 25, 1);
@@ -43,12 +43,20 @@
         }
     }
 
-    &-suptitle {
-        margin-bottom: 13px;
-    }
 
 }
 
 .travel-airline {
+    margin-top: -5%;
+    margin-left: 132px;
+    min-height: 250px;
+    background: url('../../img/travel/airlie-beach/virgin-plane.png') no-repeat;
+    background-position: right top;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
+    &__icon {
+        padding-left: 10px;
+    }
 }
