--- a/app/scss/blocks/_travel.scss
+++ b/app/scss/blocks/_travel.scss
@@ -1,8 +1,12 @@
+
 .travel {
     padding-top: 288px;
+    padding-bottom: 165px;
 
+    background: url('../../img/travel/airlie-beach/cocktail.png') no-repeat;
+    background-position-x: calc(100% + 85px);
+    background-position-y: calc(100%);
 
-    height: 2000px;
 
     &__title {
         margin-left: 13.5%;
@@ -47,7 +51,8 @@
 }
 
 .travel-airline {
-    margin-top: -5%;
+    padding-top: 50px;
+    margin-top: -9%;
     margin-left: 132px;
     min-height: 250px;
     background: url('../../img/travel/airlie-beach/virgin-plane.png') no-repeat;
@@ -55,8 +60,66 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    position: relative;
+
 
     &__icon {
         padding-left: 10px;
     }
 }
+
+.travel-info {
+    max-width: 1175px;
+    width: 100%;
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: space-between;
+
+    &__item {
+        max-width: 290px;
+        min-height: 200px;
+    }
+
+    &__title {
+        display: inline-block;
+        font-size: 18px;
+        color: $color-common;
+        opacity: $opacity-common;
+        letter-spacing: 8px;
+        line-height: 1.22;
+        text-transform: uppercase;
+        font-weight: $font-regular;
+        transform: rotate(-90deg) translate(-100%, 0);
+        transform-origin: left top;
+        top: 0;
+        left: 0;
+    }
+
+    &__text {
+        text-transform: uppercase;
+        font-weight: $font-extra-bold;
+        font-size: 40px;
+        line-height: 0.9;
+        padding-left: 40px;
+        margin-top: -18px;
+    }
+}
+
+.btn-travel {
+    justify-content: center;
+    margin-top: 70px;
+}
+
+/*
+.travel__decoration {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: url('../../img/travel/airlie-beach/cocktail.png') no-repeat;
+    width: 420px;
+    height: 420px;
+
+}
+
+*/
