--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -29,6 +29,7 @@ li {list-style: none;}
 
 .suptitle{
     display: inline-block;
+    margin-bottom: 13px;
     font-size: 22px;
     line-height: 1.45;
     letter-spacing: 7.33333px;
