--- a/app/scss/blocks/_sleep.scss
+++ b/app/scss/blocks/_sleep.scss
@@ -20,20 +20,15 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        margin-top: 180px;
+        margin-top: 60px;
         margin-right: 80px;
         span {font-weight: 100;}
 
         &__resort {
             display: block;
             position: absolute;
-            top: -40px;
+            top: 0;
             left: 0;
-            opacity: 0.9;
-            background: url('../../img/sleep/resort1.jpg') no-repeat;
-            background-size: cover;
-            background-position: center;
-            box-shadow: inset -50px 0px 50px 60px rgba(23, 25, 25, 1);
 
             max-width: 1115px;
             max-height: 780px;
