--- a/app/scss/blocks/_sleep.scss
+++ b/app/scss/blocks/_sleep.scss
@@ -24,6 +24,10 @@
         margin-right: 80px;
         span {font-weight: 100;}
 
+        &__suptitle {
+            margin-top: 135px;
+        }
+
         &__resort {
             display: block;
             position: absolute;
