--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -153,3 +153,12 @@ li {list-style: none;}
         }
     }
 }
+
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
