--- a/app/scss/blocks/_travel.scss
+++ b/app/scss/blocks/_travel.scss
@@ -103,6 +103,17 @@
         padding-left: 40px;
         margin-top: -18px;
     }
+
+    &__suptext {
+        display: block;
+        font-size: 14px;
+        text-align: right;
+        letter-spacing: 5.25px;
+        text-transform: uppercase;
+        opacity: 0.75;
+        margin-top: 2px;
+        margin-right: -5px;
+    }
 }
 
 .btn-travel {
