--- a/app/scss/blocks/_sleep.scss
+++ b/app/scss/blocks/_sleep.scss
@@ -83,6 +83,7 @@
 
     &__item {
         max-width: 290px;
+        min-width: 210px;
         min-height: 200px;
     }
 
@@ -107,7 +108,7 @@
         font-weight: $font-extra-bold;
         font-size: 40px;
         line-height: 0.9;
-        padding-left: 40px;
+        padding-left: 36px;
         margin-top: -18px;
     }
 
