--- a/app/scss/blocks/_shop.scss
+++ b/app/scss/blocks/_shop.scss
@@ -55,16 +55,31 @@
     }
 
     &__list {
-        margin-top: 25px;
         display: flex;
+        align-items: flex-end;
+        height: 200px;
     }
 
     &__name {
-
         font-size: 18px;
         line-height: 1.22;
         letter-spacing: 8px;
         text-transform: uppercase;
         opacity: 0.5;
+    }
+
+    &__item {
+        text-align: center;
+        
+    }
+
+    &__img {
+
+    }
+
+    &__price {
+        font-size: 18px;
+        font-weight: $font-extra-bold;
+        text-transform: uppercase;
     }
 }
