--- a/app/scss/blocks/_shop.scss
+++ b/app/scss/blocks/_shop.scss
@@ -5,6 +5,11 @@
     &__slider {
         margin-top: 80px;
     }
+
+    &__slider-item {
+        background: url('../../img/shop/shop-bg.png') no-repeat;
+        background-position: center right;
+    }
     
     &__title {
         margin-left: 13.5%;
@@ -18,8 +23,13 @@
 
     &__content {
         margin-left: 133px;
+        margin-right: 70px;
         display: flex;
         justify-content: space-between;
+    }
+
+    &__img-holder {
+        margin-left: -10px;
     }
 
     &__board-info {
@@ -47,7 +57,9 @@
 }
 
 .extras {
-    max-width: 400px;
+
+    margin-top: auto;
+    max-width: 333px;
     width: 100%;
 
     &__title {
@@ -57,7 +69,8 @@
     &__list {
         display: flex;
         align-items: flex-end;
-        height: 200px;
+        justify-content: space-between;
+        margin-top: 40px;
     }
 
     &__name {
@@ -66,15 +79,14 @@
         letter-spacing: 8px;
         text-transform: uppercase;
         opacity: 0.5;
+        padding-top: 32px;
+        padding-bottom: 15px;
     }
 
     &__item {
         text-align: center;
+
         
-    }
-
-    &__img {
-
     }
 
     &__price {
