--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -124,4 +124,9 @@
         width: max-content;
     }
 
+    .slider-dots__item {
+        width: auto !important;
+        margin-right: 30px;
+    }
+
 }
