--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -154,6 +154,10 @@ li {list-style: none;}
     }
 }
 
+.opacity-off {
+    opacity: $opacity-common;
+}
+
 input[type='number'] {
     -moz-appearance:textfield;
 }
