--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "blocks/global";
 @import "blocks/header";
+@import "blocks/menu-toggle";
 @import "blocks/surf";
 @import "blocks/travel";
 @import "blocks/sleep";
