--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -39,17 +39,16 @@
     background-size: contain;
     background-position: center;
     margin: 0 auto;
-    margin-top: -30px;
+    
 
     &__list {
         width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-between;
+        height: 635px;
+        position: relative;
     }
 
     &__item {
-        position: relative;
+        position: absolute;
 
         &:hover .surf-map__content-box {
             display: block;
@@ -62,34 +61,37 @@
 
         &--2 {
             top: 270px;
-            left: -3%;
+            left: 133px;
         }
 
         &--3 {
             top: 320px;
+            left: 329px;
         }
 
         &--4 {
             top: 240px;
+            left: 515px;
         }
 
         &--5 {
-            top: 550px;
-            left: -3%;
+            top: 541px;
+            left: 640px;
         }
 
         &--6 {
             top: 390px;
-            left: -3%;
+            left: 804px;
         }
 
         &--7 {
-            top: 530px;
+            top: 513px;
+            left: 1075px;
         }
 
         &--8 {
             top: 515px;
-            left: -3%;
+            left: 400px;
         }
     }
 
