work for surf map

--- a/app/scss/blocks/_surf.scss
+++ b/app/scss/blocks/_surf.scss
@@ -33,18 +33,21 @@
 /* SURF MAP */
 
 .surf-map {
-    max-width: 1200px;
+    display: flex;
+    justify-content: center;
     min-height: 635px;
     background: url('../../img/surf/surf-slider/surf-map.png') no-repeat;
     background-size: contain;
     background-position: center;
-    margin: 0 auto;
+    
     
 
     &__list {
+        max-width: 1200px;
         width: 100%;
         height: 635px;
         position: relative;
+        margin: 0 110px;
     }
 
     &__item {
