--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -53,6 +53,20 @@
     .slider-dots {
         width: 640px;
     }
+
+    /* TRAVEL */
+
+    .travel-airline {
+        margin-left: 30px;
+        background-position: 160% top;
+    }
+
+    .travel-info {
+        max-width: 900px;
+        justify-content: space-around;
+    }
+
+
 }
 
 @media (max-width: 920px) {
@@ -112,6 +126,12 @@
         .title {
             font-size: 30px;
         }
+    }
+
+    /* TRAVEL */
+    .travel-airline {
+        margin-left: 20px;
+        background-position: calc(100% + 300px) top;
     }
 }
 
