--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -140,6 +140,11 @@
     .surf-shape {
         display: none;
     }
+    /* TRAVEL */
+    .travel-head {
+        margin-right: 0px;
+        margin-top: 0px;
+    }
 }
 
 @media (max-width: 740px) {
